src/components/table/Table.css
.CreateButtonWrapper {
    justify-content: flex-end;
    margin-bottom: 0.5rem;
}

.CreateButton {
    padding: 0;
    padding-right: 0.5rem;
}

.CreateButtonSpan {
    margin-bottom: 0.1rem;
}

.Table {
    min-width: '1280px';
    max-width: '1280px';
}

.Search {
    width: 100%;
}

.SearchIcon {
    margin-right: 0.5em;
}

